Switched Semantic UI theme to Material

--- a/src/semantic/src/theme.config
+++ b/src/semantic/src/theme.config
@@ -18,15 +18,15 @@
 */
 
 /* Global */
-@site       : 'default';
+@site       : 'material';
 @reset      : 'default';
 
 /* Elements */
-@button     : 'default';
+@button     : 'material';
 @container  : 'default';
 @divider    : 'default';
 @flag       : 'default';
-@header     : 'default';
+@header     : 'material';
 @icon       : 'default';
 @image      : 'default';
 @input      : 'default';
@@ -42,7 +42,7 @@
 @breadcrumb : 'default';
 @form       : 'default';
 @grid       : 'default';
-@menu       : 'default';
+@menu       : 'material';
 @message    : 'default';
 @table      : 'default';
 
